# khan_robot

./: .gitignore  LICENSE  README.md
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/share/khan_control/cmake/: khan_controlConfig.cmake
devel/share/khan_description/cmake/: khan_descriptionConfig.cmake
devel/share/khan_gazebo/cmake/: khan_gazeboConfig.cmake
devel/share/khan_msgs/cmake/: khan_msgsConfig.cmake
devel/share/khan_platform/cmake/: khan_platformConfig.cmake
devel/share/khan_viz/cmake/: khan_vizConfig.cmake
khan_control/: CMakeLists.txt  package.xml
khan_control/cmake/: khan_controlConfig.cmake
khan_control/config/: control.yaml  example_khan.yaml  localization.yaml
khan_control/include/khan_control/: KHANHWInterface.h
khan_control/launch/: control.launch  hardware.launch  teleop.launch
khan_control/src/: KHANHWInterface.cpp  KHANPythonControl.cpp
khan_description/: CMakeLists.txt  README.md  package.xml
khan_description/cad/: BBB_Hole_Pattern.prt  CameraMountA.dwg  CameraMountA.prt  CameraMountB.dwg  CameraMountB.prt  CameraMountC.dwg  CameraMountC.prt  Component_Futaba_Horn.prt  Component_Logitech_Webcam.prt  Component_Sharp_IRSensor_GP2Y0A02YK.prt  Rover5_Base.prt  Rover5_Hole_Pattern.prt  Subcomponent_Sharp_GP2Y0A02YK-02.prt  Subcomponent_Sharp_GP2Y0A02YK.prt  Thumbs.db  Top_Plate.dxf  Top_Plate.prt  Top_Plate_B.dwg  Top_Plate_B.prt  Top_Plate_rev5.dxf  Two_Tier_Bottom.prt  Two_Tier_Top.prt  _Assembly_KHAN.prt  _Assembly_Rover5RobotPlatform.prt  _Sub_Assembley_Bottom_Plate.prt  _Sub_Assembly_Top_Plate.prt  _Sub_Assembly_Two_Tier.prt
khan_description/cad/Components/Amazon/: Component_Anker_4-Port_Ultra_Slim_USB_3.0.prt  Component_Buck_Converter.prt
khan_description/cad/Components/Dagu/: Battery_Pack.prt  _Assembly_Rover5.prt
khan_description/cad/Components/HiTec/: Component_HITEC_HS-5055MG.prt
khan_description/cad/Components/McMaster/: Component_McMaster_0.375-24-Locknut_91078A215.prt  Component_McMaster_Bearing-AngularContact-12x32x10_6680K35.prt  Component_McMaster_Bearing-AngularContact-12x32x10_6680K35_2.prt  Component_McMaster_Bearing-Radial-10x30x14_8828T311.prt  Component_McMaster_Bearing-Radial-12x28x8_6661K84.prt  Component_McMaster_Bearing-Radial-8x22x7_6661K82.prt  Component_McMaster_Bearing-RadialFlanged-6x10x3_7804K141.prt  Component_McMaster_Bearing_10x30x14.prt  Component_McMaster_Bearing_12x28x8.prt  Component_McMaster_Bearing_6x10x3_7804K141.prt  Component_McMaster_Bearing_8x22x7.prt  Component_McMaster_Bushing_Flanged_6377K105.prt  Component_McMaster_CaptiveNut_94100A130_M4.prt  Component_McMaster_CaptiveScrew_92060A120.prt  Component_McMaster_CaptiveScrew_92060A210.prt  Component_McMaster_Dowel_M2_L5_91595A019.prt  Component_McMaster_Dowel_M8_L8_91585A181.prt  Component_McMaster_EPDM-FootSoleRubber_3727T22-80A.prt  Component_McMaster_EPDM_FootSoleRubber.prt  Component_McMaster_EyeNut_3019T140.prt  Component_McMaster_FenderWasher_M3x9_91116A120.prt  Component_McMaster_Grommet-.625ID_9605K26.prt  Component_McMaster_Hoist_Ring_2949T11.prt  Component_McMaster_InternalToothLockWasher_93925A240_M3.prt  Component_McMaster_Knurled_Thumb_Screw_M3x10_92581A130.prt  Component_McMaster_LinearCarriage_9880K1.prt  Component_McMaster_LinearRail_9880K11_L55.prt  Component_McMaster_LinearRail_9880K11_L76.5.prt  Component_McMaster_LockNutNylonM8_94205A260.prt  Component_McMaster_LowProfileBolt_93070A120_SHB_M5x8.prt  Component_McMaster_M6x1-Locknut_90685A043.prt  Component_McMaster_Nut_90499A031_3-8IN.prt  Component_McMaster_Nut_90591A111_M2.prt  Component_McMaster_Nut_90591A113_M2.5.prt  Component_McMaster_Nut_90685A037_M3.prt  Component_McMaster_Nut_90685A039_M4.prt  Component_McMaster_Nut_90685A041_M5.prt  Component_McMaster_Nut_90685A043_M6.prt  Component_McMaster_Nut_95036A016_5-16IN.prt  Component_McMaster_Nut_98514A041_3-8IN_Thin.prt  (+63 more)
khan_description/cad/Components/McMaster/Bolts/: Component_McMaster_Bolt_91251A146_6-32x0.375.prt  Component_McMaster_Bolt_91251A535_SHB_0.25-20x9.525.prt  Component_McMaster_Bolt_91251A581_SHB-0.3125-18x0.75IN.prt  (+94 more)
khan_description/cad/Components/TP-Link/: Component_TP-Link_TL-WR702N.prt
khan_description/cad/Components/Texas_Instruments/: Component_BeagleBoneBlack_Approximate.prt  _Assembly_Beagle_Bone.prt
khan_description/cad/DXF/: Two_Tier_Bottom.dxf  Two_Tier_Bottom_bk.dxf  Two_Tier_Top.dxf
khan_description/cmake/: khan_descriptionConfig.cmake
khan_description/launch/: description.launch
khan_description/urdf/: decorations.urdf.xacro  description.xacro  khan.gazebo.xacro  khan.urdf.xacro  wheel.urdf.xacro
khan_gazebo/: CMakeLists.txt
khan_gazebo/launch/: khan_playpen.launch  spawn_khan.launch
khan_gazebo/urdf/: description.gazebo.xacro
khan_launch/: CMakeLists.txt  package.xml
khan_launch/launch/: example_khan_hw.launch  khan_gazebo.launch  view_model.launch  view_robot.launch
khan_msgs/: CMakeLists.txt  package.xml
khan_msgs/cmake/: khan_msgs-msg-extras.cmake
khan_msgs/msg/: KhanStatus.msg  Quadrature.msg
khan_viz/: CMakeLists.txt
khan_viz/cmake/: khan_vizConfig.cmake
src/khan_control/: package.xml
src/khan_description/: CMakeLists.txt  package.xml
src/khan_description/cad/: _Assembly_Rover5RobotPlatform.prt  rover_tread_left.stl  rover_wheel.stl  rover_wheel4.stl
src/khan_description/launch/: description.launch
src/khan_description/urdf/: decorations.urdf.xacro  description.xacro  khan.urdf.xacro  wheel.urdf.xacro
src/khan_description_original_homemade/: package.xml
src/khan_description_original_homemade/cad/: Rover5_Base.prt  Rover5_Wheel.prt  rover_wheel2.stl  rover_wheel3.stl
src/khan_gazebo/: package.xml
src/khan_gazebo/cmake/: khan_gazeboConfig.cmake
src/khan_gazebo/launch/: khan_empty_world.launch  khan_playpen.launch  spawn_khan.launch
src/khan_gazebo/urdf/: description.gazebo.xacro  khan.gazebo.xacro
src/khan_msgs/: CMakeLists.txt
src/khan_msgs/cmake/: khan_msgs-msg-paths.cmake  khan_msgsConfig.cmake
src/khan_platform/: package.xml
src/khan_platform/urdf/: khan.urdf
src/khan_viz/: package.xml
