<?xml version="1.0"?>
<package>
  <name>khan_control</name>
  <version>0.0.1</version>
  <description>KHAN controller configurations</description>

  <author email="csknabe@gmail.com">Coleman Knabe</author>
  <author email="jpz@vt.edu">Jason Ziglar</author>
  <author email="mishra42@gmail.com">John "Semi" Seminatore</author>

  <maintainer email="jpz@vt.edu">Jason Ziglar</maintainer>

  <license>BSD 3-Clause</license>

  <url type="website">https://github.com/FleetRobotics/khan_robot</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>transmission_interface</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>urdf</build_depend>
  <run_depend>transmission_interface</run_depend>
  <run_depend>control_toolbox</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>robot_localization</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>teleop_twist_joy</run_depend>
  <run_depend>twist_mux</run_depend>

  <export>
  </export>
</package>
