<?xml version="1.0"?>
<package>
  <name>khan_viz</name>
  <version>0.0.1</version>
  <description>Visualization configuration for Khan</description>

  <maintainer email="jpz@vt.edu">Jason Ziglar</maintainer>

  <license>BSD 3-Clause</license>

  <url type="website">https://github.com/FleetRobotics/khan_robot</url>

  <author email="csknabe@gmail.com">Coleman Knabe</author>
  <author email="jpz@vt.edu">Jason Ziglar</author>
  <author email="mishra42@gmail.com">John "Semi" Seminatore</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>

  <run_depend>khan_description</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>rviz_imu_plugin</run_depend>

  <export>
  </export>
</package>
